# jesus_website

./: .gitignore  README.md  app.py  deploy.sh  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: deploy.yml
assets/code_snippets/: webscrapping_importingData.txt  webscrapping_sentimentAnalysis.txt
nginx/: nginx.conf
pages/: barGeneration.py  home.py  orderBook.py  projects.py  webscrapping.py
